--- a/desafio5/index.html
+++ b/desafio5/index.html
@@ -1,26 +1,32 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Jogo da vida</title>
-    <link rel="stylesheet" href="styles/style.css">
-</head>
-<body>
+    <link rel="stylesheet" href="styles/style.css" />
+  </head>
+  <body>
     <div class="controls">
+      <h1>Jogo da vida</h1>
+      <div class="buttons">
         <button id="playAndPause">Play/Pause</button>
         <button id="reset">Resetar</button>
+      </div>
+      <input type="number" class="time" placeholder="duração" id="time" value="5"/>
+      <input type="number" class="time" placeholder="passos" id="steps" value=".5"/><p>total de passos: <span id="step">0</span></p>
+
     </div>
     <div class="container">
-        <table class="table" id="table">
+      <table class="table" id="table">
         <!-- <tr>
             <td></td>
             <td></td>
             <td></td>
         </tr> -->
-    </table>
+      </table>
     </div>
 
     <script src="scripts/script.js"></script>
-</body>
+  </body>
 </html>
