--- a/desafio5/index.html
+++ b/desafio5/index.html
@@ -13,9 +13,49 @@
         <button id="playAndPause">Play/Pause</button>
         <button id="reset">Resetar</button>
       </div>
-      <input type="number" class="time" placeholder="duração" id="time" value="5"/>
-      <input type="number" class="time" placeholder="passos" id="steps" value=".5"/><p>total de passos: <span id="step">0</span></p>
+      <label>
+        <span>tempo:</span>
+        <input
+          type="number"
+          class="time"
+          placeholder="duração"
+          id="time"
+          value="5"
+        />
+      </label>
+      <label>
+        <span>passos:</span>
+        <input
+          type="number"
+          class="time"
+          placeholder="passos"
+          id="steps"
+          value=".5"
+        />
+      </label>
 
+      <label>
+        <span>cols:</span>
+        <input
+          type="number"
+          class="time"
+          placeholder="colunas"
+          id="columns"
+          value="50"
+        />
+      </label>
+
+      <label>
+        <span>rows:</span>
+        <input
+          type="number"
+          class="time"
+          placeholder="linhas"
+          id="rows"
+          value="50"
+        />
+      </label>
+      <p>total de passos: <span id="step">0</span></p>
     </div>
     <div class="container">
       <table class="table" id="table">
