--- a/desafio5/index.html
+++ b/desafio5/index.html
@@ -40,7 +40,7 @@
           type="number"
           class="time"
           placeholder="colunas"
-          id="columns"
+          id="cols"
           value="50"
         />
       </label>
